<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/startbg"
    tools:context=".RemindersFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:id="@+id/cautionheader"
        android:layout_width="match_parent"
        android:layout_height="150dp">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="37dp"
            android:fontFamily="@font/montserrat_alternates"
            android:text="Cautions to"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/montserrat_alternates"
            android:text="consider"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="34sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@id/cautionheader"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/reminderscontainer"
            android:layout_width="match_parent"
            android:layout_height="1200dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="340dp"
                android:layout_height="182dp"
                android:layout_gravity="center"
                app:cardCornerRadius="10dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                app:cardElevation="10dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:src="@drawable/pregnant" />

                    <TextView
                        android:layout_width="224dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:layout_gravity="center"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/reminders2"
                        android:textSize="14sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="340dp"
                android:layout_height="315dp"
                app:cardCornerRadius="10dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="90dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"

                        android:src="@drawable/caution" />

                    <TextView
                        android:layout_width="223dp"
                        android:layout_height="267dp"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center"
                        android:layout_marginEnd="13dp"
                        android:layout_marginRight="15dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/reminders"
                        android:textSize="14sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/lymphcaution"
                android:layout_width="340dp"
                android:layout_height="178dp"
                app:cardCornerRadius="10dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                app:cardElevation="10dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="93dp"
                        android:layout_height="80dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginLeft="7dp"
                        android:src="@drawable/lymph" />

                    <TextView
                        android:layout_width="224dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginRight="15dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/reminders3"
                        android:textSize="14sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/burncaution"
                android:layout_width="340dp"
                android:layout_height="178dp"
                android:layout_gravity="center"
                app:cardCornerRadius="10dp"
                android:layout_below="@+id/lymphcaution"
                android:layout_marginTop="25dp"
                android:layout_centerHorizontal="true"
                app:cardElevation="10dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="101dp"
                        android:layout_height="80dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"

                        android:src="@drawable/burn" />

                    <TextView
                        android:layout_width="224dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/reminders4"
                        android:textSize="14sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/bandaidcaution"
                android:layout_width="340dp"
                android:layout_height="234dp"
                app:cardCornerRadius="10dp"
                android:layout_below="@+id/burncaution"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                app:cardElevation="10dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="101dp"
                        android:layout_height="80dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:src="@drawable/band_aid" />

                    <TextView
                        android:layout_width="224dp"
                        android:layout_height="157dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:layout_gravity="center"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/reminders5"
                        android:textSize="14sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="340dp"
                android:layout_height="250dp"
                app:cardCornerRadius="10dp"
                android:layout_below="@+id/bandaidcaution"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                app:cardElevation="10dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/nerves" />

                    <TextView
                        android:layout_width="224dp"
                        android:layout_height="211dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginRight="15dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/reminders6"
                        android:textSize="14sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>