<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/startbg"
    tools:context=".Headache_Activity">

    <RelativeLayout
        android:id="@+id/coldsview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <VideoView
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:id="@+id/videoViewcolds"/>
    </RelativeLayout>

    <FrameLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@id/coldsview"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1300dp">

                <Button
                    android:id="@+id/playcolds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:text="Play" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="80dp"
                    android:fontFamily="@font/montserrat_alternates"
                    android:text="GB-20/Gallbladder 20"
                    android:textAlignment="center"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="300dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/colds_steps1"
                    android:textAlignment="center"
                    android:textSize="15.5sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="500dp"
                    android:fontFamily="@font/montserrat_alternates"
                    android:text="LI-20/Large Intestine 20"
                    android:textAlignment="center"
                    android:textSize="28sp" />

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="720dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/colds_steps2"
                    android:textAlignment="center"
                    android:textSize="15.5sp" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="156dp"
                    app:srcCompat="@drawable/gb20" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="580dp"
                    app:srcCompat="@drawable/li20" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="900dp"
                    android:fontFamily="@font/montserrat_alternates"
                    android:text="ST-36/Stomach 36"
                    android:textAlignment="center"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="970dp"
                    app:srcCompat="@drawable/st36" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="1100dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/colds_steps3"
                    android:textAlignment="center"
                    android:textSize="15.5sp" />

                <Button
                    android:id="@+id/pausebtncolds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:text="Pause" />


            </RelativeLayout>

        </ScrollView>
    </FrameLayout>

</RelativeLayout>